src/objects/MerchandiseNews__c.object
<CustomObject>
    <fields>
        <fullName>AggregateAmount__c</fullName>
        <formula>Number__c  *  Gprice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总金额合计</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gprice__c</fullName>
        <label>商品单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceAmount__c</fullName>
        <label>开票金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>发票申请表</label>
        <referenceTo>Lnvoice__c</referenceTo>
        <relationshipLabel>商品信息</relationshipLabel>
        <relationshipName>InvoiceSP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>商品数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpecificationsModels__c</fullName>
        <label>规格型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>单位</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>商品信息</label>
    <nameField>
        <label>商品名称（收费内容）</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>商品信息</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>